--- a/charts/capsule/values-tracing.yaml
+++ b/charts/capsule/values-tracing.yaml
@@ -93,7 +93,22 @@ manager:
   # -- Set the controller deployment mode as `Deployment` or `DaemonSet`.
   kind: Deployment
 
-  command: /manager
+  command: /harpoon
+  args: 
+    - capture
+    - --function
+    - main.main
+    - --env-var
+    - "NAMESPACE=capsule-system"
+    - --dump-interval
+    - "2"
+    - --include-cmd-stdout
+    - --include-cmd-stderr
+    - --save
+    - --directory
+    - /tmp/results/
+    - --
+    - /manager
 
   image:
      # -- Set the image registry of capsule.
@@ -110,7 +125,10 @@ manager:
   # Required for use in some managed kubernetes clusters (such as AWS EKS) with custom
   # CNI (such as calico), because control-plane managed by AWS cannot communicate
   # with pods' IP CIDR and admission webhooks are not working
-  hostNetwork: false
+  hostNetwork: true
+
+  # -- Specifies if the container should be started in hostPID mode.
+  hostPID: true
 
   # -- Set an alternative to the default container port.
   #
@@ -157,6 +175,18 @@ manager:
   # -- Set the resource requests/limits for the Capsule manager container
   resources: {}
 
+  # -- Set the additional volumes needed for the Capsule manager container
+  volumes:
+    - name: debugfs
+      hostPath:
+        path: /sys/kernel/debug
+        type: Directory
+
+  # -- Set the additional volumeMounts needed for the Capsule manager container
+  volumeMounts:
+    - name: debugfs
+      mountPath: /sys/kernel/debug
+
 # -- Configuration for `imagePullSecrets` so that you can use a private images registry.
 imagePullSecrets: []
 
@@ -169,22 +199,14 @@ podAnnotations: {}
 # -- Set the priority class name of the Capsule pod
 priorityClassName: '' # system-cluster-critical
 
-# -- Set the securityContext for the Capsule pod
-podSecurityContext:
-  seccompProfile:
-    type: "RuntimeDefault"
-  runAsGroup: 1002
-  runAsNonRoot: true
-  runAsUser: 1002
-
-
 # -- Set the securityContext for the Capsule container
 securityContext:
+  privileged: true
   capabilities:
-    drop:
-    - ALL
-  allowPrivilegeEscalation: false
-  readOnlyRootFilesystem: true
+    add:
+      - SYS_ADMIN
+      - NET_ADMIN
+      - PERFOM
 
 # -- Set the node selector for the Capsule pod
 nodeSelector: {}
